# Minix-rt

./: .gitignore  CMakeLists.txt  Kconfig  README.md  VERSION  sel4m-env.sh  version.h.in
kernel/: CMakeLists.txt  Kconfig
kernel/arch/: Kconfig
kernel/arch/arm64/: CMakeLists.txt  Kconfig
kernel/arch/arm64/boot/: CMakeLists.txt
kernel/arch/arm64/configs/: defconfig  initrd_defconfig
kernel/arch/arm64/core/: CMakeLists.txt  asm-offsets.c  cpu_ops.c  cpufeature.c  cpuinfo.c  entry.S  fpsimd.c  head.S  image.h  insn.c  ioremap.c  irq.c  linker.lds.S  process.c  psci.c  ptrace.c  setup.c  signal.c  smccc-call.S  smp.c  syscall.c  test1.c  time.c  traps.c
kernel/arch/arm64/lib/: CMakeLists.txt  clear_page.S  clear_user.S  copy_from_user.S  copy_page.S  copy_to_user.S  delay.c  memset.S  strlen.S
kernel/arch/arm64/mm/: CMakeLists.txt  cache.S  context.c  extable.c  fault.c  init.c  mmu.c  proc.S
kernel/core/: CMakeLists.txt  clock.c  cpu.c  exit.c  extable.c  fork.c  ipc.c  panic.c  pid.c  printf.c  reboot.c  services.c  signal.c  smp.c  softirq.c  stack.c  sys.c  syscall.c  system.c
kernel/core/irq/: handle.c
kernel/core/locking/: CMakeLists.txt  mcs_spinlock.h  mutex.c  qrwlock.c  qspinlock.c  spinlock.c
kernel/core/object/: CMakeLists.txt
kernel/core/object/ipc/: CMakeLists.txt  ipc.c
kernel/core/object/notifier/: CMakeLists.txt  notifier.c
kernel/core/object/tcb/: CMakeLists.txt  exit.c  pid.c  services.c  tcb.c
kernel/core/object/untype/: CMakeLists.txt  internal.h  page_alloc.c  slub.c  untype.c
kernel/core/sched/: CMakeLists.txt  core.c  fair.c  idle.c  rt.c  wait.c
kernel/core/system/: CMakeLists.txt  brk.c  exec.c  fs.c  misc.c  mmap.c  mprotect.c  reboot.c  string.c
kernel/core/time/: CMakeLists.txt  clockevents.c  clocksource.c  hrtimer.c  jiffies.c  sched_clock.c  tick-common.c  tick-internal.h  tick-oneshot.c  tick-sched.h  time.c  timeconst.bc  timekeeping.c  timekeeping.h  timekeeping_internal.h
kernel/drivers/: CMakeLists.txt  Kconfig
kernel/drivers/clocksource/: CMakeLists.txt  Kconfig  arm_arch_timer.c  timer-probe.c
kernel/drivers/firmware/: psci.c
kernel/drivers/irqchip/: CMakeLists.txt  Kconfig  irq-gic-common.c  irq-gic-common.h  irq-gic.c  irqchip.c
kernel/drivers/of/: CMakeLists.txt  Kconfig  fdt.c  irq.c  of_reserved_mem.c
kernel/drivers/serial/: CMakeLists.txt  Kconfig  uart.c  uart.h  uart_pl011.c
kernel/include/asm-generic/: barrier.h  clocksource.h  delay.h  fixmap.h  getorder.h  linker.lds.h  memory_model.h  mutex-dec.h  qrwlock.h  qrwlock_types.h  qspinlock_types.h  sections.h  switch_to.h
kernel/include/clocksource/: arm_arch_timer.h
kernel/include/irqchip/: arm-gic-common.h  arm-gic.h
kernel/include/linux/: bitops.h  kbuild.h  linkage.h  stddef.h
kernel/include/minix_rt/: arm-smccc.h  build-salt.h  cpu.h  cpumask.h  delay.h  extable.h  gfp.h  hrtimer.h  interrupt.h  ipc.h  irq.h  lockdep.h  mm.h  mm_types.h  mmap.h  mmzone.h  notifier.h  of_reserved_mem.h  page-flags-layout.h  page.h  preempt.h  reboot.h  reciprocal_div.h  rwlock_api_smp.h  sched.h  signal.h  slab.h  slub_def.h  spinlock_api_smp.h  stackprotector.h  syscalls.h  system.h  uaccess.h  uts.h  wait.h
kernel/include/minix_rt/object/: notifier.h  tcb.h
kernel/include/minix_rt/sched/: fair.h  idle.h  prio.h  rt.h  sched.h
kernel/include/sel4m/: arm-smccc.h  bit_spinlock.h  bits.h  bug.h  build-salt.h  cache.h  clockchips.h  clocksource.h  compiler-clang.h  compiler-gcc.h  compiler.h  completion.h  console.h  const.h  cpu.h  cpumask.h  ctype.h  delay.h  div64.h  extable.h  gfp.h  hrtimer.h  init.h  interrupt.h  irq.h  irqchip.h  irqflags.h  jiffies.h  kbuild.h  kernel.h  ktime.h  linkage.h  lockdep.h  memory.h  mm.h  mm_types.h  mmzone.h  mutex.h  of_fdt.h  of_irq.h  (+38 more)
kernel/include/sel4m/object/: cap_types.h  ipc.h  notifier.h  pid.h  tcb.h  untype.h
kernel/include/sel4m/sched/: clock.h  fair.h  idle.h  prio.h  rt.h  sched.h
kernel/include/uapi/asm-generic/: signal.h
kernel/include/uapi/minix_rt/: binfmt.h  fs.h  ioctl.h  ipc.h  ipcconst.h  magic.h  mmap.h  notifier.h  uio.h  utsname.h
kernel/init/: CMakeLists.txt  Kconfig  init_idle.c  init_task.c  main.c  version.c
kernel/lib/: CMakeLists.txt  Kconfig  Kconfig.debug  cpumask.c  ctype.c  div64.c  extable.c  kasprintf.c  memtest.c  reciprocal_div.c  string.c  timerqueue.c  usercopy.c  vsprintf.c
kernel/libminix-rt/: CMakeLists.txt  Kconfig  libminix_rtConfig.cmake
kernel/libminix-rt/include/: errno.h  stdlib.h  string.h
kernel/libminix-rt/src/: CMakeLists.txt  brk.c  exec.c  ipc.c  malloc.c  mmap.c  notifier.c  pid.c  printf.c  random.c  string.c
kernel/libsel4m/: CMakeLists.txt  Kconfig  libsel4mConfig.cmake
kernel/libsel4m/include/: stdio.h  string.h
kernel/libsel4m/src/: CMakeLists.txt  printf.c
kernel/mm/: CMakeLists.txt  init-mm.c  internal.h  maccess.c  mmap.c  page_alloc.c  slub.c
lib/memalloc/: CMakeLists.txt  Kconfig  memallocConfig.cmake
lib/memalloc/arch/: Kconfig
lib/memalloc/src/: CMakeLists.txt  memblock.c  page_alloc.c
lib/memblock/: CMakeLists.txt  Kconfig  memblockConfig.cmake
lib/memblock/src/: CMakeLists.txt  memblock.c
lib/misc/: CMakeLists.txt  Kconfig  miscConfig.cmake
lib/misc/arch/: Kconfig
lib/misc/arch/arm64/: Kconfig  (+1 more)
lib/misc/src/: CMakeLists.txt  bitmap.c  ctype.c  div64.c  find_bit.c  hweight.c  kstrtox.c  kstrtox.h  memweight.c  string.c
lib/musllibc/: CMakeLists.txt  musllibcConfig.cmake  musllibcConfigVersion.cmake
lib/musllibc/src/: muslc.c
lib/of/: CMakeLists.txt  Kconfig  ofConfig.cmake
lib/of/src/: CMakeLists.txt  address.c  base.c  fdt.c  fdt_address.c  irq.c  of_private.h  property.c
projects/: CMakeLists.txt  Kconfig
projects/hello_world/: CMakeLists.txt  Kconfig
projects/hello_world/configs/: hello_world_defconfig
projects/hello_world/dts/: origin.dts
projects/hello_world/src/: main.c
projects/linux-test/: CMakeLists.txt
projects/linux-test/configs/: linux_defconfig
projects/linux-test/src/: main.c
projects/minix_rt_runtime/: CMakeLists.txt
projects/sel4mruntime/: CMakeLists.txt
(+318 files in other folders)
